--- a/tutorial/package.json
+++ b/tutorial/package.json
@@ -17,5 +17,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "engines": {
+    "node": ">=14.4.0",
+    "npm": ">=8.3.0"
+  }
 }
