--- a/tutorial/package.json
+++ b/tutorial/package.json
@@ -1,13 +1,7 @@
 {
   "name": "getting-started-javascript-sdk-react",
   "version": "1.0.0",
-  "dependencies": {
-    "@smartcar/auth": "^2.4.0",
-    "axios": "^0.21.2",
-    "react": "^16.10.1",
-    "react-dom": "^16.10.1",
-    "react-scripts": "^3.1.2"
-  },
+  "private": true,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build"
@@ -18,6 +12,18 @@
     "not ie <= 11",
     "not op_mini all"
   ],
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
+  },
+  "dependencies": {
+    "@smartcar/auth": "^2.4.0",
+    "axios": "^0.24.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "5.0.0"
+  },
   "engines": {
     "node": ">=14.4.0",
     "npm": ">=8.3.0"
