--- a/tutorial/package.json
+++ b/tutorial/package.json
@@ -18,11 +18,11 @@
     ]
   },
   "dependencies": {
-    "@smartcar/auth": "^2.4.0",
+    "@smartcar/auth": "^2.9.0",
     "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0"
+    "react-scripts": "^5.0.1"
   },
   "engines": {
     "node": ">=14.4.0",
